namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-commuter-webapp-xhibit-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-commuter-webapp-xhibit-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "data-engineering-cc"
    cloud-platform.justice.gov.uk/application: "Commuter Webapp Xhibit"
    cloud-platform.justice.gov.uk/owner: "data modelling & engineering team, criminal courts: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/commuter-webapp-xhibit"
    cloud-platform.justice.gov.uk/team-name: "commuter-webapp-xhibit-admin"
    cloud-platform.justice.gov.uk/review-after: ""
